--- a/philo_one/Makefile_
+++ b/philo_one/Makefile_
@@ -2,38 +2,30 @@ NAME = philo_one
 CC = gcc -O2
 FLAGS = -Wall -Wextra -Werror
 
-SRCS = main.c
+SRCS = main.c init.c eating.c
 OBJ = $(SRCS:.c=.o)
 
-HEADER = philosopher
+HEADER = philo_one.h
 
 %.o: %.c $(HEADER)
 	$(CC) $(FLAGS) -c -o $@ $<
 
 all: $(NAME)
 
-$(NAME): $(OBJ) $(LIBFT)
+$(NAME): $(OBJ)
 	@echo "compile ..."
 	@$(CC) $(FLAGS) -o $(NAME) $(OBJ)
-
-$(LIBFT): NONE
-	@make -C ./libft
-
-bonus: all
 
 clean:
 	@echo "clean minishell object files..."
 	@rm -f $(OBJ)
-	@make -C libft clean
 
 fclean: clean
-	@echo "remove minishell"
-	@echo "remove libft.a"
-	@rm -f $(NAME) $(LIBFT)
+	@rm -f $(NAME)
 
 re: fclean all
 
 norminette:
-	@norminette $(SRCS) $(HEADER) libft/*.c
+	@norminette $(SRCS) $(HEADER)
 
-.PHONY: all clean fclean bonus re norminette NONE
+.PHONY: all clean fclean re norminette NONE
