--- a/philo_two/Makefile
+++ b/philo_two/Makefile
@@ -1,11 +1,11 @@
-NAME = philo_one
+NAME = philo_two
 CC = gcc
 FLAGS = -Wall -Wextra -Werror
 
 SRCS = main.c init.c eating.c utils.c monitor.c print_message.c
 OBJ = $(SRCS:.c=.o)
 
-HEADER = philo_one.h
+HEADER = philo_two.h
 
 %.o: %.c $(HEADER)
 	$(CC) $(FLAGS) -c -o $@ $< -g
